requirements for web subsystem

--- a/requirements/web.tex
+++ b/requirements/web.tex
@@ -1,3 +1,29 @@
 \subsection{Web}
 \subsubsection{Minimum Viable Product}
+The web component of the project should:
+\begin{itemize}
+    \item Attach to a weather API to receive:
+    \begin{itemize}
+        \item Rain
+        \item Sun light
+        \item Temperature
+        \item Frost warnings
+        \item Humidity
+    \end{itemize}
+    \item Alert users of conditions outside of automatic control (i.e. soil composition and frost)
+    \item Change control parameters:
+    \begin{itemize}
+        \item Sun light
+        \item Water
+        \item Soil parameters
+    \end{itemize}
+    \item Have an intuitive user interface
+    \item Communicate with the MCU
+\end{itemize}
 \subsubsection{Stretch}
+It would be nice to have the web component:
+\begin{itemize}
+    \item Set control parameters based on presets for plants
+    \item Get plant data from the web to pass to MCU
+    \item Communicate over secure channels
+\end{itemize}
