web block diagram

--- a/InitialDocument.tex
+++ b/InitialDocument.tex
@@ -1,4 +1,6 @@
 \documentclass[12pt]{article}
+\usepackage{graphicx}
+\usepackage{float}
 \begin{document}
 \include{Title.tex}
 \pagenumbering{gobble}
