--- a/block-diagrams/web.tex
+++ b/block-diagrams/web.tex
@@ -1,1 +1,6 @@
 \subsection{Web}
+\begin{figure}[H]
+    \caption{Web component block diagram}
+    \centering
+    \includegraphics[width=\textwidth]{block-diagrams/images/WebBlock.png}
+\end{figure}
