Added MCU reqs and block diagram, added images

--- a/InitialDocument.tex
+++ b/InitialDocument.tex
@@ -1,4 +1,6 @@
 \documentclass[12pt]{article}
+\usepackage{graphicx}       % Graphics package for images
+\graphicspath{{images/}}    % Images in the images/ dir
 \begin{document}
 \include{Title.tex}
 \pagenumbering{gobble}
