--- a/requirements/mcu.tex
+++ b/requirements/mcu.tex
@@ -1,3 +1,13 @@
 \subsection{MCU}
 \subsubsection{Minimum Viable Product}
+\begin{itemize}
+    \item Read local sensor data (e.g. sunlight, soil moisture, temperature)
+    \item Adjust parameters of local modules (e.g. shade, water, nutrients)
+    \item Interpret user settings and adjust parameters of modules accordingly
+    \item Fulfill web requirements with at least two computers/controllers
+\end{itemize}
 \subsubsection{Stretch}
+\begin{itemize}
+    \item Fulfill web requirements with one computer/controller
+    \item Local user display (e.g. LCD, dot matrix, segmented)
+\end{itemize}
