added image of block diagram

--- a/block-diagrams/sensing.tex
+++ b/block-diagrams/sensing.tex
@@ -1,1 +1,6 @@
 \subsection{Sensing}
+\begin{figure}[H]
+    \caption{Sensing subsystem block diagram}
+    \centering
+    \includegraphics[width=\textwidth]{block-diagrams/images/IRSensorBlockDiagram.drawio.png}
+\end{figure}
