added preface to requirements MCU

--- a/requirements/mcu.tex
+++ b/requirements/mcu.tex
@@ -1,5 +1,6 @@
 \subsection{MCU}
 \subsubsection{Minimum Viable Product}
+The MCU subsystem should fulfill the following goals:
 \begin{itemize}
     \item Read local sensor data (e.g. sunlight, soil moisture, temperature)
     \item Adjust parameters of local modules (e.g. shade, water, nutrients)
@@ -7,6 +8,7 @@
     \item Fulfill web requirements with at least two computers/controllers
 \end{itemize}
 \subsubsection{Stretch}
+It would be nice for the MCU subsystem to accomplish:
 \begin{itemize}
     \item Fulfill web requirements with one computer/controller
     \item Local user display (e.g. LCD, dot matrix, segmented)
