--- a/management/milestones.tex
+++ b/management/milestones.tex
@@ -1,3 +1,27 @@
 \subsection{Milestones}
+From a project management perspective, the team will be utilizing Agile to get quick turn arounds on small deliverables. Choosing to use agile, the team will also be using Jira to track progress and add reports throughout the process. A high-level of the goals by semester can be found below.
 \subsubsection{Fall}
+\begin{itemize}
+    \item Select components for each subsystem
+    \begin{itemize}
+        \item Document selection reasoning
+        \item Order to ensure on-time delivery
+    \end{itemize}
+    \item Model physical bed
+    \item Build physical bed
+    \item Understand how subsystems will integrate:
+    \begin{itemize}
+        \item Communication protocols (REST, I2C, SPI, DSP, etc)
+        \item Power requirements
+    \end{itemize}
+    \item UI for Web subsystem
+\end{itemize}
 \subsubsection{Spring}
+\begin{itemize}
+    \item Test subsystems in isolation
+    \item Start integrating subsystems
+    \item Control scheme for moving solar panels with sun and to provide shade
+    \item Web API complete
+    \item MCU coding complete
+    \item Stretch goals
+\end{itemize}
