--- a/InitialDocument.tex
+++ b/InitialDocument.tex
@@ -1,6 +1,7 @@
 \documentclass[12pt]{article}
 \usepackage{graphicx}
 \usepackage{float}
+\usepackage{tabularx}
 \begin{document}
 \include{Title.tex}
 \pagenumbering{gobble}
