--- a/requirements/power.tex
+++ b/requirements/power.tex
@@ -1,11 +1,11 @@
 \subsection{Power}
 \subsubsection{Minimum Viable Product}
-\begin{enumerate}
+\begin{itemize}
   \item Power generated through a wall outlet
   \item Moves through an AC/DC converter 
   \item Then into the power supply to get dispersed throughout the MCU 
   \item Power is collected through solar panels
   \item From the solar panels through a solar power bank 
   \item Then into the power supply to get dispersed throughout the MCU
-\end{enumerate}
+\end{itemize}
 \subsubsection{Stretch}
