--- a/block-diagrams/power.tex
+++ b/block-diagrams/power.tex
@@ -1,1 +1,6 @@
 \subsection{Power}
+\begin{figure}[H]
+    \centering
+    \caption{Power subsystem block diagram}
+    \includegraphics{block-diagrams/images/PowerSystemBlock.png}
+\end{figure}
