--- a/block-diagrams/power.tex
+++ b/block-diagrams/power.tex
@@ -2,5 +2,5 @@
 \begin{figure}[H]
     \centering
     \caption{Power subsystem block diagram}
-    \includegraphics{block-diagrams/images/PowerSystemBlock.png}
+    \includegraphics[width=\textwidth]{block-diagrams/images/PowerSystemBlock.png}
 \end{figure}
