--- a/requirements/power.tex
+++ b/requirements/power.tex
@@ -1,11 +1,26 @@
 \subsection{Power}
 \subsubsection{Minimum Viable Product}
+The direction of power in this system:
 \begin{itemize}
   \item Power generated through a wall outlet
-  \item Moves through an AC/DC converter 
-  \item Then into the power supply to get dispersed throughout the MCU 
-  \item Power is collected through solar panels
-  \item From the solar panels through a solar power bank 
-  \item Then into the power supply to get dispersed throughout the MCU
+  \item AC/DC converter 
+  \item Power supply
+  \item MCU
+  \begin{itemize}
+    \item Regulators
+    \item Sensors
+    \item Mechanics
+    \item CPU
+  \end{itemize}
 \end{itemize}
 \subsubsection{Stretch}
+It would be nice to have:
+\begin{itemize}
+  \item Solar power, with the flow of power as follows:
+  \begin{itemize}
+    \item Solar panels 
+    \item Solar power bank 
+    \item Power supply 
+    \item MCU
+  \item Use the solar panels as blinds to be able to open and close as well as collect energy
+\end{itemize}
