--- a/requirements/mcu.tex
+++ b/requirements/mcu.tex
@@ -1,6 +1,6 @@
 \subsection{MCU}
 \subsubsection{Minimum Viable Product}
-The MCU subsystem should fulfill the following goals:
+The MCU subsystem should:
 \begin{itemize}
     \item Read local sensor data (e.g. sunlight, soil moisture, temperature)
     \item Adjust parameters of local modules (e.g. shade, water, nutrients)
@@ -8,8 +8,8 @@ The MCU subsystem should fulfill the following goals:
     \item Fulfill web requirements with at least two computers/controllers
 \end{itemize}
 \subsubsection{Stretch}
-It would be nice for the MCU subsystem to accomplish:
+It would be nice for the MCU subsystem to:
 \begin{itemize}
     \item Fulfill web requirements with one computer/controller
-    \item Local user display (e.g. LCD, dot matrix, segmented)
+    \item Have a local user display (e.g. LCD, dot matrix, segmented)
 \end{itemize}
