--- a/requirements/power.tex
+++ b/requirements/power.tex
@@ -22,5 +22,6 @@ It would be nice to have:
     \item Solar power bank 
     \item Power supply 
     \item MCU
+  \end{itemize}
   \item Use the solar panels as blinds to be able to open and close as well as collect energy
 \end{itemize}
