--- a/admin-content/finance.tex
+++ b/admin-content/finance.tex
@@ -11,17 +11,17 @@
         \hline
         Subsystem & Estimated Cost & Comment \\
         \hline
-        MCU & \$40 & The MCU, PCB, wiring harness \\
+        MCU & \$60 & The MCU, wiring harness \\         % Changed 2022-09-29 by Brendan
         \hline
         Power & \$200 & Solar panels, batteries, control system \\
         \hline
         Sensing & \$100 & Components for sensing, optical sensors \\
         \hline
-        Web & \$30 & Mini-PC to run server and other web service pricing \\
+        Web & \$30 & Web service pricing \\             % Changed 2022-09-29 by Brendan
         \hline
         Non-Subsystem & \$100 & The plant bed, soil, water, fittings, etc \\
         \hline
-        Total & \multicolumn{2}{|c|}{\$470}\\
+        Total & \multicolumn{2}{|c|}{\$490}\\           % Changed 2022-09-29 by Brendan
         \hline
     \end{tabularx}
     \caption{Breakdown of budget by subsystem}
