--- a/project-description/requirements.tex
+++ b/project-description/requirements.tex
@@ -1,1 +1,2 @@
-\subsection{Marketing Requirements}
+\subsection{Marketing Requirements and Engineering Requirements}
+Here will be a table of the correlation between engineering and marketing requirements
