--- a/InitialDocument.tex
+++ b/InitialDocument.tex
@@ -20,6 +20,7 @@ This project all starts with scoping out the project. The team has immediately c
 After assembling the list of requirements, the team set out to create a high-level functional block diagram for each of the subsystems. This helps the team see where the different systems integrate for the future as well as breaking out all the different components that may need to be purchased.
 
 The ultimate novelty in this project is all of the sensing that will be done through spectroscopy. The team has found a plethora of research on the topic and has started familiarizing themselves with the limitations and capabilities of the available technology. Ideally, the team would like to find a scalable solution to the sensing in which the optical sensing could be attached to a drone or satellite to survey fields for farming.
+\newpage
 \section{Project Description}
 \input{project-description/project-bg.tex}
 \input{project-description/objectives.tex}
