--- a/project-description/project-bg.tex
+++ b/project-description/project-bg.tex
@@ -1,5 +1,10 @@
 \subsection{Project Background}
-\subsubsection*{Introduction}
-Steal problem statement from executive summary.
-\subsubsection*{Motivation}
-Why are we doing this?
+Gardening is difficult. There are so many variables that a gardener must try to keep within their control. Soil moisture, temperature, soil composition just to name a few. The entire process of gardening is primarily uninvolved as a more involved process could be equated to the old adage ``watching grass grow.'' Here lies the issue, since plants grow without hardly any involvement from the gardener despite controlling the watering and feeding, a large part of the process can be automated.
+
+There have been numerous ``Garduino'' projects that anyone could find and quickly modify to their needs. These projects generally use the sensors in the Arduino starter kits as well as an LCD or dot matrix display to read out the sensor data. Such a project is not well scoped for a senior design project. The difference in what we propose and what has already been done are the control aspects, automating watering and feeding and even temperature and sunlight regulation.
+
+The sensors in the Arduino starter kits are all electrical sensors which in the high moisture environment of a plant bed will decay quickly. There has been a lot of progress in optical sensing and in our original preliminary research we found promising devices to sense soil moisture and composition optically instead of electrically. The hope is that such an optical sensor may one day be mounted on a drone and flown over a field to get the same data we are using to control our plant bed.
+
+From the sensors, the project will also implement a control scheme. The hope is to build a gantry that supports a swiveling solar panel array as well as solenoids to control water. There are also items beyond the control of the plant bed such as weather (namely frost) which will be resolved in software by notifying the user of such conditions.
+\subsubsection{Motivation}
+The idea came from seeing the ``Garduino'' style projects all over hobbyist forums and websites but the idea really took hold in that each member of the team saw an opportunity to explore a new facet of engineering they held an interest in. This project provided the team an opportunity to apply our knowledge on power systems and delivery, controls, digital signal processing, and optical sensing. These are all areas that the team wanted to demonstrate a high level of understanding in and grow at the synthesis level.
