--- a/InitialDocument.tex
+++ b/InitialDocument.tex
@@ -6,7 +6,7 @@
 \usepackage{hyperref}
 \hypersetup{
     colorlinks=true,
-    linkcolor=blue,
+    linkcolor=black,
     filecolor=blue,      
     urlcolor=blue}
 \begin{document}
