Redid the MCU table; transposed and expanded table.

--- a/InitialDocument.tex
+++ b/InitialDocument.tex
@@ -3,6 +3,7 @@
 \usepackage{graphicx}
 \usepackage{float}
 \usepackage{tabularx}
+\usepackage{ltablex}
 \usepackage{hyperref}
 \hypersetup{
     colorlinks=true,
