--- a/research/part-selection.tex
+++ b/research/part-selection.tex
@@ -30,90 +30,50 @@
     The following selections, not listed in any particular order, match the above criteria and are
     being considered for selection:
 \end{flushleft}
-\begin{table}[]
-    \centering
-    \begin{tabular}{|p{0.12\linewidth}|p{0.32\linewidth}|p{0.32\linewidth}|p{0.08\linewidth}|}
+\begin{tabularx}{\linewidth}
+    {
+        | >{\raggedright\arraybackslash}X
+        | >{\raggedright\arraybackslash}X
+        | >{\raggedright\arraybackslash}X
+        | >{\raggedright\arraybackslash}X
+        | >{\raggedright\arraybackslash}X
+        | >{\raggedright\arraybackslash}X
+        |
+    }
     \hline
-    \multicolumn{4}{|c|}{\textbf{Summary of Microcontrollers}}                                                    \\ \hline
-    \textbf{Manu\-facturer} & \textbf{Model}                                                                                & \textbf{Processor}                                        & \textbf{Price (\$)} \\ \hline
-    Texas Instruments       & \href{https://www.ti.com/tool/LAUNCHXL-CC26X2R1}{LAUNCHXL-CC26X2R1}                           & CC2652R (1x ARM Cortex-M4F @48MHz)                        & 40    \\ \hline
-    Texas Instruments       & \href{https://www.ti.com/tool/LAUNCHCC3220MODASF}{LAUNCHCC3220MODASF}                         & CC3220MODASF (1x ARM Cortex-M4 @80MHz)                    & 60    \\ \hline
-    Raspberry Pi            & \href{https://www.raspberrypi.com/products/raspberry-pi-pico/}{Pico W}                        & RP2040 (2x ARM Cortex-M0+ @133MHz)                        & 6     \\ \hline
-    Arduino                 & \href{https://store-usa.arduino.cc/products/arduino-nano-33-ble?selectedStore=u}{Nano 33 BLE} & Nordic Semiconductors nRF52840 (1x ARM Cortex-M4 @64MHz)  & 28    \\ \hline
-    STMicro\-electronics    & \href{https://www.st.com/en/evaluation-tools/b-l4s5i-iot01a.html}{B-L4S5I-IOT01A}             & STM32L4S5VIT6 (1x ARM Cortex-M4 @120MHz)                  & 53    \\ \hline
-    \end{tabular}
-    \caption{Placeholder}
-    \label{tab:my-table} 
-\end{table}
-\begin{flushleft}
-    Microcontrollers (MCUs)
-    \begin{itemize}
-        \item
-        \href{https://www.ti.com/tool/LAUNCHXL-CC26X2R1}{Texas Instruments LAUNCHXL-CC26X2R1} (\$40,
-        possibly free)
-        \begin{itemize}
-            \item Processor(s): TI CC2652R (Single ARM Cortex-M4F @48MHz)
-            \item Memory: 256KB ROM, 352KB flash, 80KB + 16KB + 4KB SRAM
-            \item Communications protocols: BLE5.2, Zigbee, Thread, UART, I2C, I2S, SPI
-            \item Features: 8-channel 12-bit ADC, 8-bit DAC, FPU, JTAG, Timers, WDT, RTC
-            \item Voltage requirements: 3V3, 5V
-            \item Physical size: n/a
-            \item Availability: TI
-        \end{itemize}
-
-        \item
-        \href{https://www.ti.com/tool/LAUNCHCC3220MODASF}{Texas Instruments LAUNCHCC3220MODASF} (\$60,
-        possibly free)
-        \begin{itemize}
-            \item Processor(s): CC3220MODASF (Single ARM Cortex-M4 @80MHz)
-            \item Memory: 1MB flash, 256KB RAM
-            \item Communications protocols: 802.11b/g/n, UART, I2C, SPI,
-            \item Features: 4-channel 12-bit ADC, JTAG, McASP, Timer, WDT
-            \item Voltage requirements: 3V3, 5V
-            \item Physical size: n/a
-            \item Availability: TI
-        \end{itemize}
-
-        \item
-        \href{https://www.raspberrypi.com/products/raspberry-pi-pico/}{Raspberry Pi Pico W} (\$6)
-        \begin{itemize}
-            \item Processor(s): RP2040 (Dual ARM Cortex-M0+ @133MHz)
-            \item Memory: 264KB SRAM
-            \item Communications protocols: 802.11n, USB1.1, UART, SPI, I2C, PIO
-            \item Features: 4-channel 12-bit SARADC, Timer, RTC, WDT, PWM
-            \item Voltage requirements: 5V, 3V3 I/O
-            \item Physical size: 2.0" $\times$ 0.83"
-            \item Availability: Digikey, Canakit
-        \end{itemize}
-
-        \item
-        \href{https://store-usa.arduino.cc/products/arduino-nano-33-ble?selectedStore=u}{Arduino Nano 33
-        BLE} (\$28)
-        \begin{itemize}
-            \item Processor(s): Nordic Semiconductors nRF52840 (Single ARM Cortex-M4 @64MHz)
-            \item Memory: 1MB flash, 256K SRAM
-            \item Communications protocols: BLE5, 802.15.4-2006, NFC, UART, SPI, I2C, I2S, USB2.0
-            \item Features: 8-channel 12-bit ADC, Timer, RTC
-            \item Voltage requirements: 3V3
-            \item Physical size: 1.8" $\times$ 0.71"
-            \item Availability: OKdo
-        \end{itemize}
-
-        \item
-        \href{https://www.st.com/en/evaluation-tools/b-l4s5i-iot01a.html}{STMicroelectronics 
-        B-L4S5I-IOT01A} (\$53)
-        \begin{itemize}
-            \item Processor(s): STM STM32L4S5VIT6 (Single ARM Cortex-M4 @120MHz) 
-            \item Memory: 2MB flash, 640KB RAM
-            \item Communications protocols: BT4.1, 802.11 b/g/n, NFC, UART, SPI, I2C, USB2.0
-            \item Features: JTAG, 16-channel 12-bit ADC, DAC Timer, RTC, SDMMC, camera interface,
-            microphones, magnetometer, barometer, accelerometer, gyroscope
-            \item Voltage requirements: 1.7-3.6V
-            \item Physical size: 3.5" $\times$ 2.4"
-            \item Availability: STM
-        \end{itemize}
-    \end{itemize}
-\end{flushleft}
+    \textbf{Model} & \textbf{\href{https://www.ti.com/tool/LAUNCHXL-CC26X2R1}{LAUNCH\-XL-CC26X2\-R1}} & \textbf{\href{https://www.ti.com/tool/LAUNCHCC3220MODASF}{LAUNCH\-CC3220\-MODASF}} & \textbf{\href{https://www.raspberrypi.com/products/raspberry-pi-pico/}{Pico W}} & \textbf{\href{https://store-usa.arduino.cc/products/arduino-nano-33-ble?selectedStore=u}{Nano 33 BLE}} & \textbf{\href{https://www.st.com/en/evaluation-tools/b-l4s5i-iot01a.html}{B-L4S5I-IOT01A}} \\
+    \hline
+    \textbf{Manu\-facturer} & Texas Instruments & Texas Instruments & Raspberry Pi & Arduino & STMicro\-electronics \\
+    \hline
+    \textbf{Micro\-controller} & CC2652R & CC3220\-MODASF & RP2040 & nRF52840 & STM32\-L4S5VIT6 \\
+    \hline
+    \textbf{Processor} & 1x ARM Cortex-M4F & 1x ARM Cortex-M4 & 2x ARM Cortex-M0+ & 1x ARM Cortex-M4 & 1x ARM Cortex-M4 \\
+    \hline
+    \textbf{Maximum Speed (MHz)} & 48 & 80 & 133 & 64 & 120 \\
+    \hline
+    \textbf{Memory (KB)} & 256 ROM, 352 flash, 100 SRAM & 1024 flash, 256 RAM & 16 ROM, 264 SRAM & 1024 flash, 256 SRAM & 2048 flash, 640 RAM \\
+    \hline
+    \textbf{Wireless capability} & BLE5.2, Zigbee, Thread & 802.11b/g/n & 802.11n & BLE5.3, Zigbee, Thread, Matter & BT4.1, 802.11b/g/n, NFC \\
+    \hline
+    \textbf{Serial capability} & UART, I2C, I2S, SPI & UART, I2C, SPI & UART, I2C, SPI, USB1.1 & UART, I2C, I2S, SPI, USB2.0 & UART, I2C, SPI, USB2.0 \\
+    \hline
+    \textbf{ADC} & 8-channel, 12-bit & 4-channel, 12-bit & 4-channel, 12-bit & 8-channel, 12-bit & 16-channel, 12-bit \\
+    \hline
+    \textbf{Clock capability} & Timer, RTC & Timer, RTC, WDT & Timer, RTC, WDT & Timer, RTC, WDT & Timer, RTC, WDT \\
+    \hline
+    \textbf{GPIO (pins)} & 31 & 29 & 30 & 13 & 16 \\
+    \hline
+    \textbf{PWM (channels)} & Supported & Supported & 16 & 4 & 6 \\
+    \hline
+    \textbf{AES (bits)} & 128, 256 & 256 & Not supported & 128 & 128 \\
+    \hline
+    \textbf{Other features} & Battery monitor, comparators, DAC, DMA, temperature monitor, TRNG & Camera interface, DMA, SDMMC & DMA, PIO, temperature sensor & Comparators Temperature sensor, RNG & Barometer, camera interface, comparator, humidity sensor, gesture-detection sensor, gyroscope, magnetometer, microphones, RNG, time-of-flight sensor  \\
+    \hline
+    \textbf{Required voltage (V)} & 1.8 -- 3.8 & 2.3 -- 3.6 & 1.8 -- 3.3 & 4.5 -- 21 & 4.75 -- 5.25 \\
+    \hline
+    \textbf{Price (\$)} & 40, maybe free & 60, maybe free & 6 & 28 & 53 \\
+    \hline
+\end{tabularx}
 \begin{flushleft}
     Use of single-board computers (SBCs) was considered, but will not not need to be used; cURL 
     used on an MCU in conjunction with \href{https://aws.amazon.com/ec2/}{Amazon EC2} services will
@@ -138,7 +98,7 @@
             \item Errata
         \end{itemize}
     \end{itemize}
-    Therefore, all of the MCUs listed above support the 802.11 sta
+    Therefore, all of the MCUs listed above support either the 802.11 or Bluetooth standards.
 \end{flushleft}
 
 \subsubsection{Power Subsystem}
